--- a/client-native/package.json
+++ b/client-native/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-av": "~8.7.0",
+    "expo-camera": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -19,14 +25,9 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "^2.15.2",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3",
-    "react-navigation-drawer": "^2.6.0",
-    "react-navigation-header-buttons": "^6.1.0",
-    "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1",
-    "socket.io-client": "^3.1.1"
+    "react-navigation-header-buttons": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
